cabal-version:       2.4

name:                histcleaner
version:             0.1.0.0
synopsis:            Synopsis will appear in the hackage package listing and search
description:         The description will appear at the top of a library
homepage:            https://github.com/bionade24/histcleaner
bug-reports:         https://github.com/bionade24/histcleaner/issues
license:             GPL-3.0-or-later
license-file:        License.txt
author:              Oskar Roesler
maintainer:          Oskar Roesler <oskar AT oskar MINUS roesler DOT de>
category:            Command Line
extra-doc-files:
  README.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: common-settings
  hs-source-dirs: src
  build-depends:
      base
    , base64
    , bytestring
    , cryptonite
    , directory
    , filepath
--    , memory
    , mtl
    , split
    , unix
    , utf8-string
    , xdg-basedir
  exposed-modules:
    HistCleaner
      HistCleaner.Cleaner
      HistCleaner.Hash
      HistCleaner.SecretStorage
  -- other-modules:

executable histcleaner
  import: common-settings
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    OptParse
  build-depends:
      base
    , bytestring
    , directory
    , filepath
    , optparse-applicative
    , histcleaner
  ghc-options:
    -O

test-suite histcleaner-test
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  other-modules:
    CleanerSpec
  build-depends:
      base
    , bytestring
    , histcleaner
    , hspec
    , hspec-discover
    , mtl
  ghc-options:
    -O -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
    hspec-discover:hspec-discover
